--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
+    "predeploy": "pnpm run build",
+    "deploy": "gh-pages -d dist",
     "fetch-data": "pnpx tsx iracing-api/fetch-data.ts",
     "parse-data": "pnpx tsx iracing-api/parse-data.ts"
   },
@@ -41,6 +43,7 @@
     "eslint": "^9.17.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
+    "gh-pages": "^6.3.0",
     "globals": "^15.14.0",
     "tough-cookie": "^4.1.4",
     "tough-cookie-file-store": "^2.0.3",
