--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "wouter": "^3.3.5",
     "zustand": "^5.0.2"
   },
   "devDependencies": {
