--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-racing",
   "private": true,
-  "version": "0.5.4",
+  "version": "0.6.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -25,6 +25,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@types/gtag.js": "^0.0.20",
+    "markdown-to-jsx": "^7.7.3",
     "next-themes": "^0.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
