--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/gtag.js": "^0.0.20",
     "markdown-to-jsx": "^7.7.3",
     "next-themes": "^0.4.4",
+    "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
